tdf#165503 oox: save numerical date categories into numerical cache

f547cf17a179ebd7de5c2b4dd2d00d0027a25429 switched
saving date categories from text to numeric, but
the values were still formatted text.
Excel considered these files corrupted.

Switch to saving actual numeric values.

Change-Id: I1f77a87fd66d6f8fde4987f110e37ed55711bdf3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182364
Tested-by: Jenkins
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>
(cherry picked from commit 9d3fba976012b65e740c024e753f034600ce2852)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182413
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>